# wordMaster

./: README.md  package-lock.json  package.json  svelte.config.js
src/: app.html  hooks.js
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/translator/: api.rs
src/components/: Calander.svelte  wordEditor.svelte
src/js/: calender_data.js  test_data.js  translator_api.js
src/routes/: +page.svelte
src/styles/: calender.scss  wordEditor.scss
