[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
default-run = "app"
edition = "2021"
rust-version = "1.56"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
whatlang = "0.16.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
